# email-cleaner

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
email_cleaner/: __main__.py  api.py  app.py  classifier.py  config.py  imap_client.py  models.py  normalize.py  service.py
email_cleaner/web/: app.js  index.html  style.css
openspec/changes/add-optional-imap-apply-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-add-gitignore-and-ruff/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-add-vscode-launch-and-ignore-dev-artifacts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-fix-optional-since-date-and-port-docs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-imap-email-cleaner-v1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-replace-sender-fields-with-from-query/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-static-web-ui-and-fixed-host/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-accept-fenced-json-classifier-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-filter-noisy-plain-text-snippets/: design.md  proposal.md  tasks.md
openspec/specs/developer-tooling/: spec.md
openspec/specs/email-classification/: spec.md
openspec/specs/email-scan-review/: spec.md
openspec/specs/local-web-ui/: spec.md
tests/: conftest.py  test_api.py  test_app.py  test_classifier.py  test_config.py  test_imap_client.py  test_normalize.py  test_service.py
(+29 files in other folders)
